objects/agents__c.object
<CustomObject>
    <fields>
        <fullName>AGENT_CODE__c</fullName>
        <displayFormat>Agent-{0000}</displayFormat>
        <label>AGENT_CODE</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMISSION__c</fullName>
        <label>COMMISSION</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PHONE_NO__c</fullName>
        <label>PHONE_NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORKING_AREA__c</fullName>
        <label>WORKING_AREA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>agents</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AGENT_NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>